# jamdas

./: .pre-commit-config.yaml  README.md  pyproject.toml  solve_with_llm.py
src/: prompt_maker.py
src/utils/: logger.py  path.py
