[tool.isort]
profile = "black"

[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yutanakamura-tky", email = "yutanakamura.tky@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "transformers>=4.40.2",
    "scikit-learn>=1.4.2",
    "scipy>=1.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "pre-commit>=3.7.1",
    "pytest>=8.2.0",
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "notebook>=7.2.0",
    "ipywidgets>=8.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/template"]
