[tool.poetry]
name = "jamdas_nlp"
version = "0.1.0"
description = ""
authors = ["Hiroshi Yoshihara"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {version = "^2.1.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.16.1+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.1.1+cu118", source = "torch_cu118"}
transformers = "^4.36.0"
langchain = "0.1.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.3.post2"
pypdf = "^3.17.2"
tiktoken = "^0.5.2"
fugashi = {extras = ["unidic-lite"], version = "^1.3.0"}
sentence-transformers = "^2.2.2"
faiss-gpu = "^1.7.2"
trafilatura = "^1.6.3"
openai = "^1.3.9"
llama-index = "^0.9.14.post3"
gradio = "^4.9.0"
wandb = "^0.16.1"
qdrant-client = "^1.7.0"
langchain-community = "^0.0.13"
sentencepiece = "^0.2.0"
openpyxl = "^3.1.2"
peft = "^0.10.0"
japanize-matplotlib = "^1.1.3"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.1"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
